--- a/profiel.html
+++ b/profiel.html
@@ -6,7 +6,9 @@
     <title>Black Panther</title>
     <link rel="stylesheet" href="compositions.css">
     <link rel="stylesheet" href="utilities.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="blocks.css">
+    <link rel="stylesheet" href="exceptions.css">
+  
   </head>
    <body id = "bodyprofiel" >
 
